# celestialcord

./: .gitignore  Cargo.toml
celestial_macros/: Cargo.toml
celestial_macros/src/: lib.rs
discord/: Cargo.toml
discord/examples/: message_commands.rs  slash_commands.rs
discord/src/: bot.rs  disc_objects.rs  discord.rs  interactions.rs  lib.rs
discord/tests/: concurrency.rs
utility_macros/: Cargo.toml
