[package]
name = "celestialcord"
version = "1.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = { version= "1.0.130", features = ["derive"] }
tokio-tungstenite = { version= "0.15.0", features=["native-tls"] }
url = "2.2.2"
futures-util = "0.3.17"
futures = "0.3.17"
serde_json = "1.0.68"
rand = "0.8.4"
serde_repr = "0.1.7"
serde_path_to_error = "0.1"
celestial_macros = {path = "../celestial_macros" }
bitflags = "1.3.2"
thiserror = "1.0.29"
chrono = { version = "0.4.19", features = ["serde"] }